--- a/API_PostgreSql/API_PostgreSql.csproj
+++ b/API_PostgreSql/API_PostgreSql.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>83d24a02-2132-4027-9adf-14af53b8a75f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
