--- a/API_PostgreSql/API_PostgreSql.csproj
+++ b/API_PostgreSql/API_PostgreSql.csproj
@@ -8,6 +8,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Domain\Models\NovaPasta\**" />
+    <Content Remove="Domain\Models\NovaPasta\**" />
+    <EmbeddedResource Remove="Domain\Models\NovaPasta\**" />
+    <None Remove="Domain\Models\NovaPasta\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Controllers\AssemblyInfo.cs" />
+    <Compile Remove="Domain\DTOs\FileName.cs" />
+    <Compile Remove="Domain\DTOs\Turns.cs" />
+    <Compile Remove="Domain\DTOs\TurnsOnTheWheel.cs" />
+    <Compile Remove="Domain\Models\TurnsAgregate\Cage.cs" />
+    <Compile Remove="Domain\Models\TurnsAgregate\ICageRepository.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
@@ -24,6 +40,11 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.32.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Domain\Models\NovaPasta1\" />
+    <Folder Include="Domain\Models\TurnsAgregate\" />
   </ItemGroup>
 
 </Project>
