--- a/API_PostgreSql/Properties/launchSettings.json
+++ b/API_PostgreSql/Properties/launchSettings.json
@@ -1,26 +1,33 @@
 {
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:42595",
+      "sslPort": 44329
+    }
+  },
   "profiles": {
     "http": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:5111",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5111"
+      }
     },
     "https": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7248;http://localhost:5111",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "KEY_TOKEN": "123as4d56asd45ads465a4s5d600000000",
-        "CONNECTION_STRING": "Server=silly.db.elephantsql.com;Port=5432;Database=yczascmf;User Id=yczascmf;Password=yrU9L_O6fDkPATpwhDM1O3Rg1npQ_94M;"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7248;http://localhost:5111"
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -29,15 +36,6 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    }
-  },
-  "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:42595",
-      "sslPort": 44329
     }
   }
 }
