--- a/API_PostgreSql/Dockerfile
+++ b/API_PostgreSql/Dockerfile
@@ -14,7 +14,7 @@ WORKDIR "/src/API_PostgreSql"
 RUN dotnet build "API_PostgreSql.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "API_PostgreSql.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "API_PostgreSql.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
