--- a/API_PostgreSql/API_PostgreSql.csproj
+++ b/API_PostgreSql/API_PostgreSql.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>83d24a02-2132-4027-9adf-14af53b8a75f</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
